8243154: Fix deprecation warnings in failure handler
Reviewed-by: dholmes