@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -86,7 +86,7 @@ public final class ValueHandler {
         delimiter = delimiter == null ? " " : delimiter;
         Class<? extends ValueParser> parserClass = property.parser();
         try {
-            field.set(object, parserClass.newInstance().parse(
+            field.set(object, parserClass.getDeclaredConstructor().newInstance().parse(
                     field.getType(), value, delimiter));
         } catch (ReflectiveOperationException | IllegalArgumentException e) {
             throw new InvalidValueException(
